// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseMessage constructor should construct properly with metadata 1`] = `
Immutable.Record {
  "id": "id",
  "type": "metadata.type",
  "from": "metadata.name",
  "text": "text",
  "timestamp": "timestamp",
}
`;

exports[`ResponseMessage constructor should construct properly with minimum params 1`] = `
Immutable.Record {
  "id": "id",
  "type": "type",
  "from": "from",
  "text": "text",
  "timestamp": "timestamp",
}
`;

exports[`ResponseMessage constructor should construct with "agent" type and from when metadata.type is "agent" 1`] = `
Immutable.Record {
  "id": "id",
  "type": "agent",
  "from": "userId",
  "text": "text",
  "timestamp": "timestamp",
}
`;

exports[`ResponseMessage constructor should construct with "system" type and from when metadata.type is missing 1`] = `
Immutable.Record {
  "id": "id",
  "type": "system",
  "from": "system",
  "text": "text",
  "timestamp": "timestamp",
}
`;


